--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "homepage": "https://github.com/bzoulko/module18_challenge#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "mongodb": "^4.11.0",
-    "sequelize": "^6.25.3"
+    "mongoose": "^6.0.13"
   }
 }
