--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/bzoulko/module18_challenge#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "mongodb": "^4.11.0",
     "mongoose": "^6.0.13"
   }
 }
